# lander

./: .gitignore  Cargo.toml  README.md  index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/: attribute.rs  geom.rs  inertia.rs  lib.rs  main.rs  ship.rs  world.rs
src/render/: mod.rs  render_target.rs  scene.rs  shader.frag  shader.vert  shader.wgsl  triangles.rs
src/render/webgl/: shader.vert  target.rs  triangles.rs
src/render/wgpu/: mod.rs  shader.wgsl  target.rs  triangles.rs
