[package]
name = "lander"
version = "0.1.0"
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
pollster = "0.2.4"
rand = "0.8.4"
raw-window-handle = "0.3.3"
wgpu = "0.10.1"
winit = "0.25.0" 