[package]
name = "lander"
version = "0.1.0"
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
getrandom = {version = "0.2.3", features = ["js"]}
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
js-sys = "0.3.54"
log = "0.4.14"
rand = "0.8.4"
wasm-bindgen = "0.2.77"
web-sys = { version = "0.3.54", features = [
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
]}