[package]
name = "lander"
version = "0.1.0"
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wgpu_render = ["pollster", "raw-window-handle", "wgpu"]
webgl = ["console_error_panic_hook", "console_log", "getrandom/js", "instant/wasm-bindgen", "js-sys", "web-sys"]

[dependencies]
console_error_panic_hook = {version = "0.1.6", optional = true}
console_log = {version = "0.2.0", optional = true}
getrandom = {version = "0.2.3", features = []}
instant = { version = "0.1", features = [] }
js-sys = { version = "0.3.54", optional = true}
log = "0.4.14"
pollster = { version = "0.2.4", optional = true }
rand = "0.8.4"
raw-window-handle = { version = "0.3.3", optional = true }
wasm-bindgen = "0.2.77"
wgpu = { version = "0.10.1", optional = true }
web-sys = { version = "0.3.51", features = [
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlRenderingContext",
    "WebGlShader",
    "WebGlUniformLocation",
], optional = true}